# python3-numericalmodel

./: .gitignore  .travis.yml  MANIFEST.in  Makefile  README.md  README.rst  setup.cfg  setup.py
docs/: Makefile
docs/source/: basics.rst  conf.py  examples.rst  index.rst  install.rst  model-setup.rst  whatsthis.rst
docs/source/api/: modules.rst  numericalmodel.gui.rst  numericalmodel.rst
docs/source/graphics/: model-basic-structure.dia
numericalmodel/: __init__.py  equations.py  genericmodel.py  gui.py  interfaces.py  numericalmodel.py  numericalschemes.py  utils.py
numericalmodel/gui/: __init__.py  gui.glade
tests/: .gitignore  __init__.py  delag.py  equations.py  interfaces.py  numericalmodel.py  numericalschemes.py  test_data.py  test_flow.py  utils.py
