[metadata]
name = numericalmodel
description = abstract classes to set up and run a numerical model
long_descrpition = file: README.md
author = Yann Büchau
author_email = yann.buechau@web.de
keywords = modelling
license = GPLv3

[build_sphinx]
source-dir = docs/
build-dir = docs/build
all_files = 1

[upload_sphinx]
upload-dir = docs/build/html
